# climbingweathermap

./: .gitignore  Makefile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  index.html  package-lock.json  package.json  pyproject.toml
backend/: .pylintrc  Dockerfile  app.py  pyproject.toml  settings.py
backend/app/: app.py  settings.py
backend/app/weathermap/: __init__.py  models.py
backend/data/: locations.json  locations_all.json
backend/tests/: test_app.py  test_models.py
backend/tools/: build_locations.py  il-areas.jsonlines  mi-areas.jsonlines  mo-areas.jsonlines  nd-areas.jsonlines  or-areas.jsonlines  wa-areas.jsonlines  wi-areas.jsonlines
backend/weathermap/: models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/assets/: custom.scss  rain logos.afdesign
frontend/src/components/: Dropdown.vue  Footer.vue  Icon.vue  Map.vue  NavBar.vue  Options.vue  Popup.vue  Wpopup.vue
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: nginx.conf
public/: index.html
src/: App.vue  main.js
src/assets/: custom.css  custom.css.map  custom.scss  globaL.css
src/components/: Dropdown.vue  Footer.vue  Map.vue  Modal.vue  NavBar.vue  Options.vue  SideBar.vue
src/utils/: map.js
templates/: index.html
weathermap/: __init__.py  models.py
weathermap/tools/: ca-areas.jsonlines  ia-areas.jsonlines  in-areas.jsonlines  ks-areas.jsonlines  mn-areas.jsonlines  ne-areas.jsonlines  oh-areas.jsonlines  sd-areas.jsonlines
