[tool.poetry]
name = "weathermap"
version = "0.1.0"
description = "Climbing Weather Map"
authors = ["fanoway <86997883+fanoway@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.26.0"
Flask-RESTful = "^0.3.9"
Flask-Cors = "^3.0.10"
pandas = "^1.3.0"
Flask-Caching = "^1.10.1"
APScheduler = "^3.7.0"
rich = "^10.6.0"
python-dotenv = "0.17.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79